refactor: replace new lambda and factory method